# pagri-data-tools

./: .gitignore  README.md  environment.yml  mkdocs.yml  my_module.py  pagri_data_tools.py  pagri_graphs.py  pagri_prep.py  pyproject.toml  requirements.txt  run.py  setup.py  style.css  temp.css
docs/modules/: pagri_graphs.md  pagri_nb_tools.md  pagri_prep.md  pagri_stats.md
pagri_data_tools/: __init__.py  base_dim_tree.py  core.py  func_for_prep.py  new.py  pagri_graphs.py  pagri_nb_tools.py  pagri_prep.py  pagri_stats.py  test.ipynb
pagri_data_tools/anomalies/: __init__.py  anomaly.py
pagri_data_tools/info/: analyzer.py
site/: 404.html  index.html  objects.inv
site/modules/pagri_graphs/: index.html
site/modules/pagri_nb_tools/: index.html
site/modules/pagri_prep/: index.html
site/modules/pagri_stats/: index.html
