[tool.poetry]
name = "pagri-data-tools"
version = "0.1.0"
description = "This repository contains data analysis modules, including tools for data preprocessing, visualization, statistical analysis."
authors = ["Pavel Grigoryev <pagri.analytics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
dash = ">=2.18.2,<3.0.0"
ipython = ">=8.32.0,<9.0.0"
ipywidgets = ">=8.1.5,<9.0.0"
nbformat = ">=5.10.4,<6.0.0"
numpy = ">=2.2.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
pingouin = ">=0.5.5,<0.6.0"
plotly = ">=6.0.0,<7.0.0"
kaleido = "0.2.1"
pyaspeller = ">=2.0.2,<3.0.0"
pymystem3 = ">=0.2.0,<0.3.0"
scikit-learn = ">=1.6.1,<2.0.0"
scipy = ">=1.15.2,<2.0.0"
setuptools = ">=75.8.0,<76.0.0"
statsmodels = ">=0.14.4,<0.15.0"
termcolor = ">=2.5.0,<3.0.0"
tqdm = ">=4.67.1,<5.0.0"
ipykernel = ">=6.29.5,<7.0.0"
jupyter = ">=1.1.1,<2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
