[tool.poetry]
name = "pagri_data_tools"
version = "0.1.0"
description = "This repository contains data analysis modules, including tools for data preprocessing, visualization, statistical analysis."
authors = ["Pavel Grigoryev <pagri.analytics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "2.18.2"
ipython = "8.27.0"
ipywidgets = "8.1.5"
nbformat = "5.10.4"
numpy = "2.1.3"
pandas = "2.2.3"
pingouin = "0.5.5"
plotly = "6.0.0"
kaleido = "0.2.1"
pyaspeller = "2.0.0"
pymystem3 = "0.2.0"
scikit_learn = "1.5.2"
scipy = "1.14.1"
setuptools = "69.5.1"
statsmodels = "0.14.4"
termcolor = "2.5.0"
tqdm = "4.67.0"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
