[tool.poetry]
name = "pagri_data_tools"
version = "0.1.0"
description = "This repository contains data analysis modules, including tools for data preprocessing, visualization, statistical analysis."
license = "MIT"
authors = ["Pavel Grigoryev <pagri.analytics@gmail.com>"]
repository = "https://github.com/PAGriAnalytics/pagri-data-tools"
readme = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.11"
dash = "2.18.2"
ipython = "8.27.0"
ipywidgets = "8.1.5"
nbformat = "5.10.4"
numpy = "2.1.3"
pandas = "2.2.3"
pingouin = "0.5.5"
plotly = "5.24.1"
kaleido = "0.2.1"
pyaspeller = "2.0.0"
pymystem3 = "0.2.0"
scikit_learn = "1.5.2"
scipy = "1.14.1"
setuptools = "69.5.1"
statsmodels = "0.14.4"
termcolor = "2.5.0"
tqdm = "4.67.0"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
pdoc = "^15.0.3"
textblob = "^0.19.0"
wordcloud = "^1.9.4"
scikit-posthocs = "^0.11.4"
sphinx = "^8.2.3"
sphinx-autodoc-typehints = "^3.1.0"
sphinx-rtd-theme = "^3.0.2"
sphinx-autoapi = "^3.6.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.12"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.10"
mkapi = "^4.2.5"
altair = "^5.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
